--- a/templates/profile.html
+++ b/templates/profile.html
@@ -2,8 +2,6 @@
 
 <!DOCTYPE html>
 <html lang="en">
-
-
 <head>
     <meta content="text/html; charset=utf-8" http-equiv="Content-Type"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
@@ -11,19 +9,14 @@
     <meta content="" name="keywords"/>
     <title>Profile - {{user_profile.user.username}}</title>
     <link href="{% static 'images/favicon.png' %}" rel="icon" type="image/png">
-
     <link href="{% static 'css/main.min.css' %}" rel="stylesheet">
     <link href="{% static 'css/style.css' %}" rel="stylesheet">
     <link href="{% static 'css/color.css' %}" rel="stylesheet">
     <link href="{% static 'css/responsive.css' %}" rel="stylesheet">
-
 </head>
 <body>
-<!--<div class="se-pre-con"></div>-->
-<div class="theme-layout">
 
-</div>
-
+<div class="theme-layout"></div>
 <section>
     <div class="feature-photo">
         <figure><img alt="" src="{% static 'images/resources/timeline-1.jpg' %}"></figure>
@@ -60,29 +53,15 @@
                     <button style="background-color: #ffc0cb; border: #ffc0cb;" type="submit">{{button_text}}</button>
                 </a>
                 {% endif %}
-
             </div>
         </form>
 
-        <!-- <form class="edit-phto">
-            <i class="fa fa-camera-retro"></i>
-            <label class="fileContainer">
-                Upload Cover Photo
-            <input type="file"/>
-            </label>
-        </form> -->
         <div class="container-fluid">
             <div class="row merged">
                 <div class="col-lg-2 col-sm-3">
                     <div class="user-avatar">
                         <figure>
                             <img alt="" src="{{user_profile.profileimg.url}}" style="height: 250px; width: 100%;">
-                            <!-- <form class="edit-phto">
-                                <i class="fa fa-camera-retro"></i>
-                                <label class="fileContainer">
-                                    <a href="#account-settings">Upload Profile Photo</a>
-                                </label>
-                            </form> -->
                         </figure>
                     </div>
                 </div>
@@ -90,40 +69,22 @@
                     <div class="timeline-info">
                         <ul>
                             <li class="admin-name">
-                                <h5 style="color: black;white-space: nowrap; width: 110px; font-size: 27px;"><b>@{{user_profile.user.username}}</b>
-                                    <!--<i class="fa fa-check-circle" style="color: #48dbfb;" aria-hidden="true"></i>-->
+                                <h5 style="color: black;white-space: nowrap; width: 110px; font-size: 27px;">
+                                    <b>@{{user_profile.user.username}}</b>
                                 </h5>
-                                <!--<span>Group Admin</span>-->
                             </li>
-                            <!--<li>
-                                <a class="" href="javascript:void(0)" title="" data-ripple="">Go live!</a>
-                                <a class="" href="javascript:void(0)" title="" data-ripple="">Music</a>
-                                <a class="" href="emporium/index-3.html" title="" data-ripple="">Emporium</a>
-                                <a class="" href="fitness/index.html" title="" data-ripple="">Health Inspection</a>
-                                <a class="" href="settings/account-setting.html" title="" data-ripple="">Settings</a>
-                                <a class="" href="javascript:void(0)" title="" data-ripple="">Upload</a>
-                                <a class="" href="time-line.html" title="" data-ripple="">time line</a>
-                                <a class="" href="timeline-photos.html" title="" data-ripple="">Photos</a>
-                                <a class="" href="timeline-videos.html" title="" data-ripple="">Videos</a>
-                                <a class="" href="timeline-friends.html" title="" data-ripple="">Friends</a>
-                                <a class="" href="timeline-groups.html" title="" data-ripple="">Groups</a>
-                                <a class="" href="about.html" title="" data-ripple="">about</a>
-                                <a class="" href="#" title="" data-ripple="">more</a>
-
-                            </li>-->
                         </ul>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</section><!-- top area -->
+</section>
 <section>
     <div class="bio">
         {{user_profile.bio}}
     </div>
 </section>
-
 <section>
     <div class="gap gray-bg">
         <div class="container-fluid">
@@ -132,16 +93,12 @@
                     <div class="row" id="page-contents">
                         <div class="col-lg-3">
                             <aside class="sidebar static">
-
-
                             </aside>
-                        </div><!-- sidebar -->
-
+                        </div>
 
                         <div class="col-lg-6">
                             <div class="central-meta">
                                 <ul class="photos">
-
                                     {% for post in user_posts %}
                                     <li>
                                         <a class="strip" data-strip-group="mygroup"
@@ -151,17 +108,12 @@
                                                  style="height: 250px; width: 300px;"></a>
                                     </li>
                                     {% endfor %}
-
-
                                 </ul>
-                                <!--<div class="lodmore"><button class="btn-view btn-load-more"></button></div>-->
-                            </div><!-- photos -->
-                        </div><!-- centerl meta -->
+                            </div>
+                        </div>
                         <div class="col-lg-3">
-                            <aside class="sidebar static">
-
-                            </aside>
-                        </div><!-- sidebar -->
+                            <aside class="sidebar static"></aside>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -169,13 +121,10 @@
     </div>
 </section>
 
-
-<script data-cfasync="false"
-        src="{% static '../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js' %}"></script>
+<!-- Scripts ================================================== -->
+<script data-cfasync="false" src="{% static '../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js' %}"></script>
 <script src="{% static 'js/main.min.js' %}"></script>
 <script src="{% static 'js/script.js' %}"></script>
 
 </body>
-
-
 </html>
