--- a/templates/index.html
+++ b/templates/index.html
@@ -102,11 +102,11 @@
                 </div>
             </div>
             <a href="#">
-                <img alt="" class="header-avatar" src="{{user_profile.profileimg.url}}">
+                <img alt="" class="header-avatar" src="{{profile.avatar.url}}">
             </a>
             <div class="header_dropdown profile_dropdown border-t" uk-drop="mode: click;offset:9">
                 <ul>
-                    <li><a href="/profile/{{user_profile}}">Profile</a></li>
+                    <li><a href="/profile/{{profile}}">Your Profile</a></li>
                     <li><a href="/settings"> Account setting </a></li>
                     <li><a href="/logout"> Log Out</a></li>
                 </ul>
@@ -197,20 +197,20 @@
 
                 <div class="divide-gray-300 divide-gray-50 divide-opacity-50 divide-y px-4 ">
 
-                    {% for suggestion in suggestions_username_profile_list %}
+                    {% for suggested_profile in suggested_profiles %}
                     <div class="flex items-center justify-between py-3">
                         <div class="flex flex-1 items-center space-x-4">
-                            <a href="/profile/{{suggestion.user}}">
-                                <img class="bg-gray-200 rounded-full w-10 h-10" src="{{suggestion.profileimg.url}}">
+                            <a href="/profile/{{suggested_profile}}">
+                                <img class="bg-gray-200 rounded-full w-10 h-10" src="{{suggested_profile.avatar.url}}">
                             </a>
                             <div class="flex flex-col">
-                                <span class="block capitalize font-semibold"> {{suggestion.user}} </span>
-                                <span class="block capitalize text-sm"> {{suggestion.bio}} </span>
+                                <span class="block capitalize font-semibold"> {{suggested_profile}} </span>
+                                <span class="block capitalize text-sm"> {{suggested_profile.bio}} </span>
                             </div>
                         </div>
 
                         <a class="border border-gray-200 font-semibold px-4 py-1 rounded-full hover:bg-pink-600 hover:text-white hover:border-pink-600 "
-                           href="/profile/{{suggestion.user}}">
+                           href="/profile/{{suggested_profile}}">
                             View User </a>
                     </div>
                     {% endfor %}
