Create IndexView class

--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
             <div class="left-side">
                 <div class=" uk-hidden@s" id="logo">
                     <a href="home.html">
-                        <b><h1 style="text-transform: uppercase;">Social Book</h1></b>
+                        <b><h1 style="text-transform: uppercase;">Startup Platform</h1></b>
                     </a>
                 </div>
                 <input name="username" placeholder="Search for username.." type="text">
@@ -35,7 +35,7 @@
             <!-- upload -->
             <a class="bg-pink-500 flex font-bold hidden hover:bg-pink-600 hover:text-white inline-block items-center lg:block max-h-10 mr-4 px-4 py-2 rounded shado text-white"
                href="#">
-                Create Project
+                Создать проект
             </a>
 
             <div class="header_dropdown"
