--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -36,69 +36,69 @@
         <div class="right-side lg:pr-4">
 
             <!-- Create project -->
-               <a class="bg-pink-500 flex font-bold hidden hover:bg-pink-600 hover:text-white inline-block items-center lg:block max-h-10 mr-4 px-4 py-2 rounded shado text-white"
-                   href="#">
-                    Создать проект
-                </a>
+            <a class="bg-pink-500 flex font-bold hidden hover:bg-pink-600 hover:text-white inline-block items-center lg:block max-h-10 mr-4 px-4 py-2 rounded shado text-white"
+               href="#">
+                Создать проект
+            </a>
 
-                <div class="header_dropdown"
-                     uk-dropdown="pos: top-right;mode:click ; animation: uk-animation-slide-bottom-small">
-                    <div class="px-4 py-3 -mx-5 -mt-4 mb-5 border-b">
-                        <h4>Создать проект</h4>
+            <div class="header_dropdown"
+                 uk-dropdown="pos: top-right;mode:click ; animation: uk-animation-slide-bottom-small">
+                <div class="px-4 py-3 -mx-5 -mt-4 mb-5 border-b">
+                    <h4>Создать проект</h4>
+                </div>
+                <div class="flex justify-center flex-center text-center">
+                    <div class="flex flex-col choose-upload text-center">
+                        <form action="create-project" enctype="multipart/form-data" method="POST">
+                            {% csrf_token %}
+
+                            <label for="projectname">Уникальное имя проекта</label>
+                            <input class="mb-3 bg-gray-200" type="text" name="projectname" id="projectname">
+
+                            <label for="name">Имя</label>
+                            <input class="mb-3 bg-gray-200" type="text" name="name" id="name">
+
+                            <label for="description">Описание</label>
+                            <textarea class="mb-3 bg-gray-200" name="description" id="description"></textarea>
+
+                            <label for="image">Загрузить фото</label>
+                            <input class="bg-gray-200 mb-3" name="image" type="file" id="image">
+
+                            <button class="button bg-blue-700" type="submit">Создать</button>
+                        </form>
                     </div>
-                    <div class="flex justify-center flex-center text-center">
-                        <div class="flex flex-col choose-upload text-center">
-                            <form action="create-project" enctype="multipart/form-data" method="POST">
-                                {% csrf_token %}
 
-                                <label for="projectname">Уникальное имя проекта</label>
-                                <input class="mb-3 bg-gray-200" type="text" name="projectname" id="projectname">
-
-                                <label for="name">Имя</label>
-                                <input class="mb-3 bg-gray-200" type="text" name="name" id="name">
-
-                                <label for="description">Описание</label>
-                                <textarea class="mb-3 bg-gray-200" name="description" id="description"></textarea>
-
-                                <label for="image">Загрузить фото</label>
-                                <input class="bg-gray-200 mb-3" name="image" type="file" id="image">
-
-                                <button class="button bg-blue-700" type="submit">Создать</button>
-                            </form>
+                    <div class="uk-flex uk-flex-column choose-upload" hidden>
+                        <div class="mx-auto flex flex-col h-24 items-center justify-center relative w-full rounded-lg">
+                            <svg class="w-12" fill="currentColor" viewBox="0 0 20 20"
+                                 xmlns="http://www.w3.org/2000/svg">
+                                <path clip-rule="evenodd"
+                                      d="M2 9.5A3.5 3.5 0 005.5 13H9v2.586l-1.293-1.293a1 1 0 00-1.414 1.414l3 3a1 1 0 001.414 0l3-3a1 1 0 00-1.414-1.414L11 15.586V13h2.5a4.5 4.5 0 10-.616-8.958 4.002 4.002 0 10-7.753 1.977A3.5 3.5 0 002 9.5zm9 3.5H9V8a1 1 0 012 0v5z"
+                                      fill-rule="evenodd"></path>
+                            </svg>
                         </div>
-
-                        <div class="uk-flex uk-flex-column choose-upload" hidden>
-                            <div class="mx-auto flex flex-col h-24 items-center justify-center relative w-full rounded-lg">
-                                <svg class="w-12" fill="currentColor" viewBox="0 0 20 20"
-                                     xmlns="http://www.w3.org/2000/svg">
-                                    <path clip-rule="evenodd"
-                                          d="M2 9.5A3.5 3.5 0 005.5 13H9v2.586l-1.293-1.293a1 1 0 00-1.414 1.414l3 3a1 1 0 001.414 0l3-3a1 1 0 00-1.414-1.414L11 15.586V13h2.5a4.5 4.5 0 10-.616-8.958 4.002 4.002 0 10-7.753 1.977A3.5 3.5 0 002 9.5zm9 3.5H9V8a1 1 0 012 0v5z"
-                                          fill-rule="evenodd"></path>
-                                </svg>
+                        <p class="my-3 leading-6"> Import videos from YouTube <br> Copy / Paste your video link here
+                        </p>
+                        <form class="uk-grid-small" uk-grid>
+                            <div class="uk-width-expand">
+                                <input class="uk-input uk-form-small  bg-gray-200 " placeholder="Paste link"
+                                       style="box-shadow:none"
+                                       type="text">
                             </div>
-                            <p class="my-3 leading-6"> Import videos from YouTube <br> Copy / Paste your video link here
-                            </p>
-                            <form class="uk-grid-small" uk-grid>
-                                <div class="uk-width-expand">
-                                    <input class="uk-input uk-form-small  bg-gray-200 " placeholder="Paste link"
-                                           style="box-shadow:none"
-                                           type="text">
-                                </div>
-                                <div class="uk-width-auto">
-                                    <button class="button soft-warning -ml-2" type="submit">
-                                        Import
-                                    </button>
-                                </div>
-                            </form>
-                            <a class="uk-text-muted mt-3 uk-link" href="#"
-                               uk-toggle="target: .choose-upload ; animation: uk-animation-slide-left-small, uk-animation-slide-right-medium; queued: true">
-                                Or Upload Video </a>
-                        </div>
-                    </div>
-                    <div class="px-4 py-3 -mx-5 -mb-4 mt-5 border-t text-sm">
-                        Your Image size Must be Maxmium 999MB
+                            <div class="uk-width-auto">
+                                <button class="button soft-warning -ml-2" type="submit">
+                                    Import
+                                </button>
+                            </div>
+                        </form>
+                        <a class="uk-text-muted mt-3 uk-link" href="#"
+                           uk-toggle="target: .choose-upload ; animation: uk-animation-slide-left-small, uk-animation-slide-right-medium; queued: true">
+                            Or Upload Video </a>
                     </div>
                 </div>
+                <div class="px-4 py-3 -mx-5 -mb-4 mt-5 border-t text-sm">
+                    Your Image size Must be Maxmium 999MB
+                </div>
+            </div>
 
 
             <!-- Create post -->
@@ -188,20 +188,22 @@
 <div class="container m-auto">
     <div class="lg:flex justify-center lg:space-x-10 lg:space-y-0 space-y-5">
         <div class="space-y-5 flex-shrink-0 lg:w-7/12">
-            {% for suggested_post in suggested_posts reversed %}
+            {% for suggested_post_and_likes in suggested_posts_and_likes reversed %}
                 <div class="bg-white shadow rounded-md  -mx-2 lg:mx-0">
                     <div class="flex justify-between items-center px-4 py-3">
                         <div class="flex flex-1 items-center">
-                            <a href="/profile/{{ suggested_post.profile }}">
+                            <a href="/profile/{{ suggested_post_and_likes.post.profile }}">
                                 <img alt="" class="header-avatar" src="{{ profile.avatar.url }}" width="32" height="32"
                                      style="border-radius: 50%">
                             </a>
                             <span class="font-semibold block ml-2">
-                                <a href="/profile/{{ suggested_post.profile }}">@{{ suggested_post.profile }}</a>
+                                <a href="/profile/{{ suggested_post_and_likes.post.profile }}">@{{ suggested_post_and_likes.post.profile }}</a>
                             </span>
                         </div>
                         <div>
-                            <p class="font-bold text-black"><a href="/project/{{ suggested_post.project }}">{{ suggested_post.project }}</a></p>
+                            <p class="font-bold text-black"><a
+                                    href="/project/{{ suggested_post_and_likes.post.project }}">{{ suggested_post_and_likes.post.project }}</a>
+                            </p>
                         </div>
                         {#                        <div>#}
                         {#                            <a href="#"> <i#}
@@ -222,9 +224,9 @@
                     </div>
 
                     <div uk-lightbox>
-                        <a href="{% take_image_url suggested_post.image %}">
+                        <a href="{% take_image_url suggested_post_and_likes.post.image %}">
                             <div class="flex justify-center">
-                                <img alt="" src="{% take_image_url suggested_post.image %}">
+                                <img alt="" src="{% take_image_url suggested_post_and_likes.post.image %}">
                             </div>
                         </a>
                     </div>
@@ -232,27 +234,37 @@
                     <div class="py-3 px-4 space-y-3">
 
                         <p class="text-black" style="word-break: break-all">
-                            <a href="/profile/{{ suggested_post.profile }}"><strong>{{ suggested_post.profile }}</strong></a>
-                            {{ suggested_post.content }}
+                            <a href="/profile/{{ suggested_post_and_likes.post.profile }}"><strong>{{ suggested_post_and_likes.post.profile }}</strong></a>
+                            {{ suggested_post_and_likes.post.content }}
                         </p>
                         <div class="flex space-x-4 lg:font-bold">
-                            <a class="flex items-center space-x-2" href="/like-post?post_id={{ suggested_post.id }}">
-                                <div class="rounded-full text-black flex">
-                                    <svg class="" fill="currentColor" height="25"
-                                         viewBox="0 0 20 20" width="25" xmlns="http://www.w3.org/2000/svg">
-                                        <path d="M2 10.5a1.5 1.5 0 113 0v6a1.5 1.5 0 01-3 0v-6zM6 10.333v5.43a2 2 0 001.106 1.79l.05.025A4 4 0 008.943 18h5.416a2 2 0 001.962-1.608l1.2-6A2 2 0 0015.56 8H12V4a2 2 0 00-2-2 1 1 0 00-1 1v.667a4 4 0 01-.8 2.4L6.8 7.933a4 4 0 00-.8 2.4z"/>
-                                    </svg>
-                                    <div class="ml-2">
-                                        {% if post.no_of_likes == 0 %}
-                                            <p>No likes</p>
-                                        {% elif post.no_of_likes == 1 %}
-                                            <p>Liked by {{ post.no_of_likes }} person</p>
-                                        {% else %}
-                                            <p>No likes</p>
-                                        {% endif %}
+
+                            {# Like action #}
+                            <form action="like-post" enctype="multipart/form-data" method="POST">
+                                <input name="post_id" type="hidden" value="{{ suggested_post_and_likes.post.pk }}">
+                                <button type="submit">
+                                    <div class="rounded-full text-black flex">
+                                        <svg class=""
+                                                {% if suggested_post_and_likes.is_profile_like %}
+                                             fill="red"
+                                                {% else %}
+                                             fill="currentColor"
+                                                {% endif %}
+                                             height="25"
+                                             viewBox="0 0 20 20" width="25" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M2 10.5a1.5 1.5 0 113 0v6a1.5 1.5 0 01-3 0v-6zM6 10.333v5.43a2 2 0 001.106 1.79l.05.025A4 4 0 008.943 18h5.416a2 2 0 001.962-1.608l1.2-6A2 2 0 0015.56 8H12V4a2 2 0 00-2-2 1 1 0 00-1 1v.667a4 4 0 01-.8 2.4L6.8 7.933a4 4 0 00-.8 2.4z"/>
+                                        </svg>
+                                        <div class="ml-2">
+                                            {% if suggested_post_and_likes.amount_of_likes == 0 %}
+                                                <p>No likes</p>
+                                            {% else %}
+                                                <p>{{ suggested_post_and_likes.amount_of_likes }} likes</p>
+                                            {% endif %}
+                                        </div>
                                     </div>
-                                </div>
-                            </a>
+                                </button>
+                            </form>
+
                         </div>
                     </div>
 
