--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -109,10 +109,24 @@
 
             <div class="lg:w-5/12">
 
-                <div class="bg-white  shadow-md rounded-md overflow-hidden">
+                {# User list #}
+                <div class="bg-white  shadow-md rounded-md overflow-hidden mb-5">
 
                     <div class="bg-gray-50  border-b border-gray-100 flex items-baseline justify-between py-4 px-6 ">
-                        <h2 class="font-semibold text-lg">Users You Can Follow</h2>
+                        <h2 class="font-semibold text-lg">Пользователи</h2>
+
+                        <a href="/profiles-list">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                 fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                 stroke-linejoin="round" class="feather feather-list">
+                                <line x1="8" y1="6" x2="21" y2="6"></line>
+                                <line x1="8" y1="12" x2="21" y2="12"></line>
+                                <line x1="8" y1="18" x2="21" y2="18"></line>
+                                <line x1="3" y1="6" x2="3.01" y2="6"></line>
+                                <line x1="3" y1="12" x2="3.01" y2="12"></line>
+                                <line x1="3" y1="18" x2="3.01" y2="18"></line>
+                            </svg>
+                        </a>
                     </div>
 
                     <div class="divide-gray-300 divide-gray-50 divide-opacity-50 divide-y px-4 ">
@@ -132,12 +146,59 @@
 
                                 <a class="border border-gray-200 font-semibold px-4 py-1 rounded-full hover:bg-pink-600 hover:text-white hover:border-pink-600 "
                                    href="/profile/{{ suggested_profile }}">
-                                    View User </a>
+                                    Профиль</a>
                             </div>
                         {% endfor %}
                     </div>
                 </div>
+
+                {# Project list #}
+                <div class="bg-white  shadow-md rounded-md overflow-hidden">
+
+                    <div class="bg-gray-50  border-b border-gray-100 flex items-baseline justify-between py-4 px-6 ">
+                        <h2 class="font-semibold text-lg">Проекты</h2>
+
+                        <a href="/projects-list">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                 fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                 stroke-linejoin="round" class="feather feather-list">
+                                <line x1="8" y1="6" x2="21" y2="6"></line>
+                                <line x1="8" y1="12" x2="21" y2="12"></line>
+                                <line x1="8" y1="18" x2="21" y2="18"></line>
+                                <line x1="3" y1="6" x2="3.01" y2="6"></line>
+                                <line x1="3" y1="12" x2="3.01" y2="12"></line>
+                                <line x1="3" y1="18" x2="3.01" y2="18"></line>
+                            </svg>
+                        </a>
+
+                    </div>
+
+                    <div class="divide-gray-300 divide-gray-50 divide-opacity-50 divide-y px-4 ">
+
+                        {% for suggested_project in suggested_projects %}
+                            <div class="flex items-center justify-between py-3">
+                                <div class="flex flex-1 items-center space-x-4">
+                                    <a href="/project/{{ suggested_project }}">
+                                        <img class="bg-gray-200 rounded-full w-10 h-10"
+                                             src="{% take_image_url suggested_project.image %}">
+                                    </a>
+                                    <div class="flex flex-col">
+                                        <span class="block capitalize font-semibold"> {{ suggested_project }} </span>
+                                        <span class="block capitalize text-sm"> {{ suggested_project.name }} </span>
+                                    </div>
+                                </div>
+
+                                <a class="border border-gray-200 font-semibold px-4 py-1 rounded-full hover:bg-pink-600 hover:text-white hover:border-pink-600 "
+                                   href="/project/{{ suggested_project }}">
+                                   Проект
+                                </a>
+                            </div>
+                        {% endfor %}
+                    </div>
+                </div>
+
             </div>
+
         </div>
     </div>
 {% endblock %}
