--- a/authentication/templates/authentication/layout.html
+++ b/authentication/templates/authentication/layout.html
@@ -16,6 +16,8 @@
 </head>
 <body class="bg-gray-100">
 
+{% include 'header.html' %}
+
 <div class="flex flex-col justify-between h-screen" id="wrapper">
 
     <div class="bg-white py-4 shadow dark:bg-gray-800">
