Profile page fix

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -16,7 +16,7 @@
                         <div class="flex justify-between items-center px-4 py-3">
                             <div class="flex flex-1 items-center">
                                 <a href="/profile/{{ suggested_post_and_likes.post.profile }}">
-                                    <img alt="" class="header-avatar" src="{{ profile.avatar.url }}" width="32"
+                                    <img alt="" class="header-avatar" src="{{ suggested_post_and_likes.post.profile.avatar.url }}" width="32"
                                          height="32"
                                          style="border-radius: 50%">
                                 </a>
