--- a/src/templates/comment_post.html
+++ b/src/templates/comment_post.html
@@ -14,7 +14,7 @@
                 <div class="flex justify-between items-center px-4 py-3">
                     <div class="flex flex-1 items-center">
                         <a href="/profile/{{ post.profile }}">
-                            <img alt="" class="header-avatar" src="{{ profile.avatar.url }}" width="32"
+                            <img alt="" class="header-avatar" src="{{ post.profile.avatar.url }}" width="32"
                                  height="32"
                                  style="border-radius: 50%">
                         </a>
@@ -65,13 +65,13 @@
                     {% for comment_of_post in comments_of_post %}
                         <div class="flex mb-3 justify-between"
                              style="border-bottom: 1px solid #666; width: 100%;
-                                     {% if comment_of_post.profile == profile %}
+                                     {% if comment_of_post.profile == current_profile %}
                                          flex-direction: row-reverse;
                                      {% endif %}
                                      ">
                             <div class="">
                                 <h4 class="font-bold text-black mb-2" style="
-                                        {% if comment_of_post.profile == profile %}
+                                        {% if comment_of_post.profile == current_profile %}
                                             text-align: end;
                                         {% endif %}
                                         ">{{ comment_of_post.profile }}</h4>
@@ -83,7 +83,7 @@
                                         ">{{ comment_of_post.content }}</p>
                             </div>
 
-                            {% if is_editor or comment_of_post.profile == profile %}
+                            {% if is_editor or comment_of_post.profile == current_profile %}
                                 <div class="flex justify-center items-center" style="margin: 0 .75rem">
                                     <form action="/comment-post/{{ post }}" enctype="multipart/form-data" method="post">
 
