Translate header.html

--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -150,9 +150,9 @@
             </a>
             <div class="header_dropdown profile_dropdown border-t" uk-drop="mode: click;offset:9">
                 <ul>
-                    <li><a href="/profile/{{ profile }}">Your Profile</a></li>
-                    <li><a href="/settings"> Account setting </a></li>
-                    <li><a href="/logout"> Log Out</a></li>
+                    <li><a href="/profile/{{ profile }}">Профиль</a></li>
+                    <li><a href="/settings">Настройки</a></li>
+                    <li><a href="/logout">Выход</a></li>
                 </ul>
             </div>
 
