--- a/src/templates/project.html
+++ b/src/templates/project.html
@@ -1,20 +1,5 @@
+{% extends 'layout.html' %}
 {% load static %}
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta content="text/html; charset=utf-8" http-equiv="Content-Type"/>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="" name="description"/>
-    <meta content="" name="keywords"/>
-    <title>Profile - {{profile}}</title>
-    <link href="{% static 'images/favicon.png' %}" rel="icon" type="image/png">
-    <link href="{% static 'css/main.min.css' %}" rel="stylesheet">
-    <link href="{% static 'css/style.css' %}" rel="stylesheet">
-    <link href="{% static 'css/color.css' %}" rel="stylesheet">
-    <link href="{% static 'css/responsive.css' %}" rel="stylesheet">
-</head>
-<body>
 
 <div class="theme-layout"></div>
 <h1>Project {{ project }}</h1>
