Add footer.html to main app

--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -70,7 +70,7 @@
                     </div>
                 </div>
                 <div class="px-4 py-3 -mx-5 -mb-4 mt-5 border-t text-sm">
-                    Your Image size Must be Maxmium 999MB
+                    Размер загружаемого файла не должен превышать 8МБ
                 </div>
             </div>
 
@@ -139,7 +139,7 @@
                         </div>
                     </div>
                     <div class="px-4 py-3 -mx-5 -mb-4 mt-5 border-t text-sm">
-                        Your Image size Must be Maxmium 999MB
+                        Размер загружаемого файла не должен превышать 8МБ
                     </div>
                 </div>
             {% endif %}
