--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -188,7 +188,7 @@
 
                                 <a class="border border-gray-200 font-semibold px-4 py-1 rounded-full hover:bg-pink-600 hover:text-white hover:border-pink-600 "
                                    href="/project/{{ suggested_project }}">
-                                   Проект
+                                   Перейти
                                 </a>
                             </div>
                         {% endfor %}
