--- a/src/templates/profile.html
+++ b/src/templates/profile.html
@@ -1,22 +1,10 @@
 {% extends 'layout.html' %}
-{% load static %}
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta content="text/html; charset=utf-8" http-equiv="Content-Type"/>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="" name="description"/>
-    <meta content="" name="keywords"/>
-    <title>Profile - {{profile}}</title>
-    <link href="{% static 'images/favicon.png' %}" rel="icon" type="image/png">
-    <link href="{% static 'css/main.min.css' %}" rel="stylesheet">
-    <link href="{% static 'css/style.css' %}" rel="stylesheet">
-    <link href="{% static 'css/color.css' %}" rel="stylesheet">
-    <link href="{% static 'css/responsive.css' %}" rel="stylesheet">
-</head>
-<body>
+{% block title %}
+    Startup Platform
+{% endblock %}
 
+{% block content %}
 <div class="theme-layout"></div>
 <section>
     <div class="feature-photo">
@@ -122,11 +110,4 @@
         </div>
     </div>
 </section>
-
-<!-- Scripts ================================================== -->
-<script data-cfasync="false" src="{% static '../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js' %}"></script>
-<script src="{% static 'js/main.min.js' %}"></script>
-<script src="{% static 'js/script.js' %}"></script>
-
-</body>
-</html>
+{% endblock %}
